feat: CORS 추가, 로그인 시 email 방식으로 안되던 문제 해결